# xml-schema

./: LICENSE  README.md
xml_schema/: Cargo.toml
xml_schema/src/: lib.rs
xml_schema/tests/: complex_type.rs  complex_type_sequence_choice.xsd  dmarc_rua.rs  simple_type.rs
xml_schema_derive/: Cargo.toml
xml_schema_derive/src/: lib.rs
xml_schema_derive/src/xsd/: annotation.rs  attribute.rs  attribute_group.rs  choice.rs  complex_content.rs  complex_type.rs  element.rs  enumeration.rs  extension.rs  group.rs  import.rs  list.rs  max_occurences.rs  mod.rs  restriction.rs  rust_types_mapping.rs  schema.rs  sequence.rs  simple_content.rs  simple_type.rs  union.rs
