[package]
name = "hifa-xml-schema-derive"
version = "0.3.5"
description = "Structure generator from XSD source file"
edition = "2018"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>", "hifa-lang"]
keywords = ["XML", "Schema", "XSD"]
license = "MIT"
repository = "https://github.com/media-io/xml-schema"
homepage = "https://github.com/media-io/xml-schema"
documentation = "https://docs.rs/xml_schema"
readme = "../README.md"

[lib]
name = "hifa_xml_schema_derive"
proc-macro = true

[features]
default = ["reqwest/default-tls"]

[dependencies]
darling = "0.20.3"
heck = "0.4"
log = "0.4"
proc-macro2 = "1.0"
quote = "~1.0"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
] }
simple_logger = "4"
syn = { version = "2.0", features = ["visit", "extra-traits"] }
xml-rs = "0.8"
# hifa_yaserde_derive = { version = "0.9.3" }
hifa_yaserde_derive = { version = "0.9.3", path = "../../yaserde/yaserde_derive" }
# hifa_yaserde = { version = "0.9.3" }
hifa_yaserde = { version = "0.9.3", path = "../../yaserde/yaserde" }
